# gaming

./: .gitignore  .gitmodules  CMakeLists.txt  basic_fragment.glsl  basic_vertex.glsl  callbacks.cc  main.cc  shader.cc  shader.h  vao.cc  vao.h
glad/include/glad/: glad.h
glad/src/: glad.c  readme.txt
res/: basic_fragment.glsl  basic_fragment2.glsl  basic_vertex.glsl
src/: callbacks.h  ebo.cc  ebo.h  glfw_wrapper.cc  glfw_wrapper.h  main.cc  shader.cc  shader.h  texture.cc  texture.h  vbo.cc  vbo.h
